<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable  name="player" type="iut.projet.model.metier.Player"/>
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activite_principale_player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/joinActivity_pseudo_hint"

            style="@style/textInput">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/join"
            style="@style/Button"
            android:text="@string/rejoindre"/>

        <Button
            android:id="@+id/host"
            style="@style/Button"
            android:text="@string/heberger"/>

        <Button
            android:id="@+id/rules"
            style="@style/Button"
            android:text="@string/regles"/>


    </LinearLayout>
</layout>